<resources>
    <string name="app_name">理财计划</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_today">今天</string>
    <string name="action_select">选择</string>
    <string name="action_add">添加一条</string>

    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="new_add">新增</string>
    <string name="update">修改</string>

    <string name="money_unit">元</string>

    <string name="title_activity_function_assign">功能账户现金流分配器</string>
    <string name="title_activity_challenge_52">52周存钱挑战表</string>
    <string name="title_activity_cash_map">现金流分配地图</string>
    <string name="title_activity_setting">设置</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="snackbar_action_complete">完成</string>
    <string name="snackbar_save_ok">保存成功！</string>
    <string name="snackbar_failed_less">未保存，还没有完成100%分配哦！</string>
    <string name="snackbar_failed_more_percent">未保存，分配比例超过了100% ！</string>
    <string name="snackbar_failed_more_money">未保存，分配总金额超过每月收入！</string>

    <string name="main_notice_no_record">暂无记录</string>
    <string name="main_notice_income"><Data><![CDATA[日收入：<font color="red">%1$s</font> 元]]></Data></string>
    <string name="main_notice_out"><Data><![CDATA[日支出：<font color="green">%1$s</font> 元]]></Data></string>
    <string name="main_month_income"><Data><![CDATA[月收入：<font color="red">%1$s</font> 元]]></Data></string>
    <string name="main_month_out"><Data><![CDATA[月支出：<font color="green">%1$s</font> 元]]></Data></string>

    <string name="main_date">日期：</string>
    <string name="main_method">方式：</string>
    <string name="main_first">主选单：</string>
    <string name="main_second">副选单：</string>
    <string name="main_money">金额：</string>
    <string name="main_comment">备注：</string>
    <string name="main_save_successfully">保存成功</string>
    <string name="main_save_failed">保存失败</string>
    <string name="main_delete_successfully">删除成功</string>
    <string name="main_delete_failed">删除失败</string>
    <string name="main_update_successfully">修改成功</string>
    <string name="main_update_failed">修改失败</string>

    <string name="account_first_second">%1$s－%2$s</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
