<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="com.wsy.plan.main.model.AccountModel" />

        <variable
            name="handler"
            type="com.wsy.plan.main.AddActivity" />
    </data>

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.wsy.plan.main.AddActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_account_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> handler.onCancelClick()}"
                    android:text="@string/cancel" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/new_add"
                    android:textColor="@color/common_dark"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_account_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> handler.onSaveClick()}"
                    android:text="@string/save"
                    android:textColor="@android:color/holo_green_dark" />
            </LinearLayout>

            <View
                style="@style/CommonDividerHorizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/main_left"
                    android:text="@string/main_date" />

                <TextView
                    android:id="@+id/tv_account_date"
                    style="@style/main_right"
                    android:text="@={model.account_date}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/main_left"
                    android:text="@string/main_method" />

                <Spinner
                    android:id="@+id/spinner_account_method"
                    style="@style/main_right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/main_left"
                    android:text="@string/main_first" />

                <Spinner
                    android:id="@+id/spinner_account_first"
                    style="@style/main_right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/main_left"
                    android:text="@string/main_second" />

                <Spinner
                    android:id="@+id/spinner_add_second"
                    style="@style/main_right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/main_left"
                    android:text="@string/main_money" />

                <EditText
                    android:id="@+id/edit_account_money"
                    style="@style/main_right"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:text="@={model.account_money}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/main_left"
                    android:text="@string/main_comment" />

                <EditText
                    android:id="@+id/edit_account_comment"
                    style="@style/main_right"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:text="@={model.account_comment}" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</layout>
